p3/confs/ingress.yaml
# kind: Namespace
# apiVersion: v1
# metadata:
#   name: argocd 

# ---

# kind: Namespace
# apiVersion: v1
# metadata:
#   name: argocd

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
